src/index.css
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Signika+Negative:wght@300;400;600;700&display=swap');

/* CSS Mini Reset http://www.vcarrer.com/2010/05/css-mini-reset.html */

html, body, div, form, fieldset, legend, label
{
 margin: 0;
 padding: 0;
}

table
{
 border-collapse: collapse;
 border-spacing: 0;
}

th, td
{
 text-align: left;
 vertical-align: top;
}

h1, h2, h3, h4, h5, h6, th, td, caption { font-weight:normal; }

img { border: 0; }

/* Overall Styles */

* {
  box-sizing: border-box;
}


body {
  margin: 0;
  font-family: 'Signika Negative', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 1em;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

p {
  font-size: var(--medium);
}

/* Font sizes 5, 7, 9, 12, 16, 21, 28, 37, 50, 67, 83 https://www.lambdatest.com/blog/guide-to-css-variables-with-examples/ */
* {
  --xxx-small: 5px;
  --xx-small: 7px;
  --x-small: 9px;
  --small: 12px;
  --medium: 16px;
  --large: 21px;
  --x-large: 28px;
  --xx-large: 37px;
  --xxx-large: 50px;
  --xxxx-large: 67px;
  --xxxxx-large: 83px
}

/* Colors */
* {
  --primary: #4b2f86;
  --secondary: #5ea8af;
  --tertiary: #4b2f86;
  --background: #ffffff;
  --text-color: #24143d;
  --inverse-text-color: #ffffff;
  --text-link: #428086;
}

@media (prefers-color-scheme: dark) {
  * {
    --primary: #5ea8af;
    --secondary: #8666C9;
    --tertiary: #f89fba;
    --background: #19161f;
    --text-color: #adaaa7;
    --text-link: #5ea8af;
    --inverse-text-color: #0A0909;
  }
}

